[gd_scene load_steps=6 format=3 uid="uid://fuerk0yjirwy"]

[ext_resource type="Theme" uid="uid://bi44xrkt28la2" path="res://assets/theme/first_theme.tres" id="1_8d6x5"]
[ext_resource type="Script" path="res://scripts/pomodoro_timer_scene.gd" id="1_554l7"]
[ext_resource type="Texture2D" uid="uid://cp7k13q83cq2r" path="res://assets/images/icons/smile.png" id="2_jil6i"]
[ext_resource type="Texture2D" uid="uid://ciwtw3vdwjbnc" path="res://assets/images/icons/neutral.png" id="3_0aonp"]
[ext_resource type="Texture2D" uid="uid://di6kmaeo1bblm" path="res://assets/images/icons/sad.png" id="4_ww1d6"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 502.0
offset_top = 238.0
offset_right = -778.0
offset_bottom = -482.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8d6x5")
script = ExtResource("1_554l7")
metadata/_edit_vertical_guides_ = [508.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -155.0
offset_top = -132.0
offset_right = 512.0
offset_bottom = 320.0
theme_override_constants/separation = 9

[node name="WorkTimeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WorkLabel" type="Label" parent="VBoxContainer/WorkTimeContainer"]
layout_mode = 2
text = "Work Time (mins):"

[node name="WorkTimeSpinBox" type="SpinBox" parent="VBoxContainer/WorkTimeContainer"]
layout_mode = 2

[node name="RestTimeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RestLabel" type="Label" parent="VBoxContainer/RestTimeContainer"]
layout_mode = 2
text = "Rest Time (mins): "

[node name="RestTimeSpinBox" type="SpinBox" parent="VBoxContainer/RestTimeContainer"]
layout_mode = 2

[node name="TimerContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TimerLabel" type="Label" parent="VBoxContainer/TimerContainer"]
layout_mode = 2
text = "TIMER:"

[node name="ResetButton" type="Button" parent="VBoxContainer/TimerContainer"]
layout_mode = 2
text = "RESET"

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "START"

[node name="PauseButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "PAUSE"

[node name="SoundEffectPlayer" type="AudioStreamPlayer" parent="VBoxContainer"]

[node name="MoodContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="MoodLabel" type="Label" parent="VBoxContainer/MoodContainer"]
layout_mode = 2
text = "Mood:"

[node name="MoodOption" type="OptionButton" parent="VBoxContainer/MoodContainer"]
layout_direction = 2
layout_mode = 2
tooltip_text = "Mood"
theme_override_icons/icon = ExtResource("2_jil6i")
alignment = 1
expand_icon = true
selected = 0
item_count = 3
popup/item_0/text = "Happy"
popup/item_0/icon = ExtResource("2_jil6i")
popup/item_1/text = "Neutral"
popup/item_1/icon = ExtResource("3_0aonp")
popup/item_1/id = 1
popup/item_2/text = "Sad"
popup/item_2/icon = ExtResource("4_ww1d6")
popup/item_2/id = 2

[node name="DiaryEntry" type="TextEdit" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
size_flags_stretch_ratio = 0.0
placeholder_text = "Please Enter Why"
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="SaveToJSONButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "EXPORT TO JSON"

[node name="LoadFromJSONButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load From JSON"

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/TimerContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveToJSONButton" to="." method="_on_save_to_json_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadFromJSONButton" to="." method="_on_load_from_json_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
